--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.cuberto:liquid-swipe:1.0.0'
+    implementation 'com.github.Udhayarajan:liquid-swipe-android:1.0.1'
     implementation 'com.android.support:design:30.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.31"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
     implementation 'androidx.core:core:1.5.0'
     implementation 'androidx.core:core-ktx:1.5.0'
 
