--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -20,16 +21,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures{
 
-    dataBinding {
-        enabled = true
+        dataBinding = true
+
     }
+
+//    dataBinding {
+//        enabled = true
+//    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -37,9 +44,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.github.Udhayarajan:liquid-swipe-android:1.0.1'
+    implementation 'com.cuberto:liquid-swipe:1.0.0'
     implementation 'com.android.support:design:30.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
+    implementation 'com.google.firebase:firebase-bom:28.1.0'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'androidx.core:core:1.5.0'
     implementation 'androidx.core:core-ktx:1.5.0'
 
