--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'androidx.core:core:1.5.0'
     implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'com.yarolegovich:sliding-root-nav:1.1.1'
 
 }
