--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,13 @@ dependencies {
     implementation 'com.cuberto:liquid-swipe:1.0.0'
     implementation 'com.android.support:design:30.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
-    implementation 'com.google.firebase:firebase-bom:28.1.0'
+    implementation 'com.google.firebase:firebase-bom:28.2.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'androidx.core:core:1.5.0'
     implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'com.yarolegovich:sliding-root-nav:1.1.1'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
