--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DashBoardActivity"></activity>
+        <activity android:name=".NavigationDrawer"></activity>
+        <activity android:name=".DashBoardActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".OnboardingActivity" />
         <activity android:name=".onBoardingScreen" />
